# fig2csv-poc

./: .gitignore  README.md  pyproject.toml
docs/: chartdete_result.md  external_model_search.md  plan.md  results_sample1.md
outputs/chartdete_sample/: README.md  raw_detections.json  summary.json
outputs/external_hf_chart_detector/: results.json
outputs/sample1/: result.json
scripts/: make_sample_chart.py  run_pipeline.py  test_external_hf_chart_detector.py
src/fig2csv/: compare.py  detectors.py  ocr_points.py  pipeline.py  schemas.py  visualize.py
